--- a/package.json
+++ b/package.json
@@ -20,5 +20,34 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/udacity/reactnd-chirper-app.git"
+  },
+  "resolutions": {
+    "lodash": "^4.17.19",
+    "websocket-extensions": "^0.1.4",
+    "acorn": ">=5.7.4",
+    "minimist": "^0.2.1",
+    "handlebars": "^4.3.0",
+    "lodash.template": "^4.5.0",
+    "mem": "^4.0.0",
+    "stringstream": "^0.0.6",
+    "eslint": "^4.18.2",
+    "diff": "^3.5.0",
+    "querystringify": "^2.0.0",
+    "nwmatcher": "^1.4.4",
+    "braces": "^2.3.1",
+    "clean-css": "^4.1.11",
+    "js-yaml": "^3.13.1",
+    "fstream": "^1.0.12",
+    "tar": "^2.2.2",
+    "extend": "^3.0.2",
+    "react-dev-utils": "^5.0.2",
+    "webpack-dev-server": "^3.1.11",
+    "merge": "^1.2.1",
+    "randomatic": "^3.0.0",
+    "deep-extend": "^0.5.1",
+    "cryptiles": "^4.1.2",
+    "macaddress": "^0.2.9",
+    "sshpk": "^1.13.2",
+    "url-parse": "^1.4.3"
   }
 }
